Fixed Search bar alignment

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -55,6 +55,7 @@ header img {
     width: 100px;
     height: auto;
     margin-left: 20px;
+    margin-right: 150px;
     margin-top: 8px;
 }
 
@@ -65,7 +66,6 @@ header form {
     background-color: #ccc;
     border-radius: 15px;
     padding: 0px 10px;
-    margin-left: 70px;
 }
 
 header input {
@@ -245,7 +245,21 @@ h2 {
 
 .desktop-only { display: inline; }
 
-@media (max-width: 768px) {
+@media (max-width: 1410px) and (min-width: 840px) {
+    header img {
+        width: 70px;
+        margin-left: 0px;
+        margin-right: 200px;
+        margin-top: 5px;
+    }
+
+    header form {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+}
+
+@media (max-width: 840px) {
     html, body {
         overflow-x: hidden;
     }
@@ -293,12 +307,13 @@ h2 {
     header img {
         width: 70px;
         margin-left: 0px;
+        margin-right: 0px;
         margin-top: 5px;
     }
     
     header form {
         margin-left: 0px;
-        margin-right: 10px;
+        margin-right: 20px;
     }
     
     header input {
@@ -323,8 +338,11 @@ h2 {
     .desktop-only {
         font-size: 0; 
     }
-}
 
-@media (max-width: 1410px) and (min-width: 768px) {
+    .hamburger,
+    .hamburger::before,
+    .hamburger::after {
+        margin-right: 15px;
+    }
 
 }
